--- a/problemset2.ipynb
+++ b/problemset2.ipynb
@@ -355,7 +355,7 @@
       "metadata": {
         "id": "eUlj5y8QuPjv"
       },
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -371,7 +371,7 @@
         "id": "0XkHNXaStiqR",
         "outputId": "73fdda44-bf7c-43a6-c3e8-527459b1c98f"
       },
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -410,7 +410,7 @@
       "metadata": {
         "id": "Xm3D2hLK0hZc"
       },
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -421,7 +421,7 @@
       "metadata": {
         "id": "JqLLc_iq095q"
       },
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -443,7 +443,7 @@
       "metadata": {
         "id": "x7n7UbQb1gDP"
       },
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -468,7 +468,7 @@
         "id": "Sf8XCyTj1AZa",
         "outputId": "1334ed3f-408f-48d9-d61f-5d4f422a3758"
       },
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -505,7 +505,7 @@
         "id": "uYbB7C9F1hqG",
         "outputId": "64a554cb-ed40-4203-bace-4db98dcd93b4"
       },
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -551,7 +551,7 @@
         "id": "PZ12bb3c1mFY",
         "outputId": "ec2c33ec-a492-4969-9a2f-a588e2a48b70"
       },
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -588,7 +588,7 @@
         "id": "4buvsb9M13Fy",
         "outputId": "8d5078cf-2d97-44f0-f24a-6a717102658a"
       },
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -599,6 +599,37 @@
             "\n",
             "OneVOne: F1 score for each class = \n",
             "[0.         0.         0.         0.         0.71153846]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"OneVOne: macro-averaged F1 score for each class = \")\n",
+        "print(f1_score(y_test, y_predict_1v1, average = 'macro'))\n",
+        "\n",
+        "print(\"\\nOneVOne: micro-averaged F1 score for each class = \")\n",
+        "print(f1_score(y_test, y_predict_1v1, average = 'micro'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BjhFbIO7Zwpz",
+        "outputId": "c555dd5a-920b-47d0-c1dd-057dde614857"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "OneVOne: macro-averaged F1 score for each class = \n",
+            "0.1423076923076923\n",
+            "\n",
+            "OneVOne: micro-averaged F1 score for each class = \n",
+            "0.5522388059701493\n"
           ]
         }
       ]
@@ -619,7 +650,7 @@
         "id": "EYTaoNy12B4z",
         "outputId": "15d3edb4-222c-4c93-c554-e9763ea3dca5"
       },
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -640,10 +671,30 @@
         "df_filtered.part10.value_counts()"
       ],
       "metadata": {
-        "id": "YMlUfebX2JNW"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YMlUfebX2JNW",
+        "outputId": "bd8101bb-236a-4fe7-870f-f6842118f71f"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5.0    124\n",
+              "4.0     50\n",
+              "3.0     21\n",
+              "1.0     14\n",
+              "2.0     13\n",
+              "Name: part10, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 143
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -673,7 +724,7 @@
         "id": "oi08k9Aa2crW",
         "outputId": "45db59b6-1e24-4e25-a093-efab183cc8e7"
       },
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -687,6 +738,186 @@
             "\n",
             "OneVRest: micro-averaged F1 score for each class = \n",
             "0.47761194029850745\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "hyperparam tuning"
+      ],
+      "metadata": {
+        "id": "6Gy2SfntamWP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.multiclass import OneVsRestClassifier\n",
+        "from sklearn.model_selection import GridSearchCV"
+      ],
+      "metadata": {
+        "id": "ZZ499WsCalgb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define the parameter grid\n",
+        "param_grid = {\n",
+        "    'estimator__C': [0.1, 1, 10],  # Example values\n",
+        "    'estimator__penalty': ['l1', 'l2']  # Example values\n",
+        "}\n",
+        "\n",
+        "# Initialize the OneVsRest Classifier\n",
+        "clf = OneVsRestClassifier(LogisticRegression(solver='liblinear', max_iter=500))\n",
+        "\n",
+        "# Initialize Grid Search\n",
+        "grid_search = GridSearchCV(clf, param_grid, cv=5, scoring='accuracy')\n",
+        "\n",
+        "# Fit the model\n",
+        "grid_search.fit(X_train, y_train)\n",
+        "\n",
+        "# Best parameters\n",
+        "print(\"Best Parameters: \", grid_search.best_params_)\n",
+        "\n",
+        "# Use these parameters to make predictions or further analysis\n",
+        "y_predict = grid_search.predict(X_test)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kjExKSp_ap0_",
+        "outputId": "6add6849-6dea-48de-e2fb-ea8b9e95ca38"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Best Parameters:  {'estimator__C': 0.1, 'estimator__penalty': 'l1'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "final_clf = OneVsRestClassifier(LogisticRegression(solver='liblinear', C=0.1, penalty='l1', max_iter=500))\n",
+        "final_clf.fit(X_train, y_train)\n",
+        "y_predict_final = final_clf.predict(X_test)"
+      ],
+      "metadata": {
+        "id": "8YhVxsOtbBMt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Predict on the test data\n",
+        "y_pred = final_clf.predict(X_test)\n",
+        "\n",
+        "# Calculate macro-averaged F1 score\n",
+        "f1_macro = f1_score(y_test, y_pred, average='macro')\n",
+        "print(\"Macro-averaged F1 score: \", f1_macro)\n",
+        "\n",
+        "# Calculate micro-averaged F1 score\n",
+        "f1_micro = f1_score(y_test, y_pred, average='micro')\n",
+        "print(\"Micro-averaged F1 score: \", f1_micro)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oyI79BGMbZl1",
+        "outputId": "881e49b0-c8a5-44f6-b0f6-29c29d62b7b7"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Macro-averaged F1 score:  0.1423076923076923\n",
+            "Micro-averaged F1 score:  0.5522388059701493\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Cross validation"
+      ],
+      "metadata": {
+        "id": "PjPLDUgWcH6C"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import cross_val_score"
+      ],
+      "metadata": {
+        "id": "6wUEVE8_cJxs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Assuming X is your feature set and y is the target variable\n",
+        "scores = cross_val_score(final_clf, X, y, cv=5, scoring='f1_macro')  # For macro F1 score"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Iz-jQ33zcKj7",
+        "outputId": "f5f5ffd2-edfc-4fdd-b0e4-228748eb9db5"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/sklearn/svm/_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"F1 Macro scores for each fold:\", scores)\n",
+        "print(\"Average F1 Macro score:\", scores.mean())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wjBKG1sxccYm",
+        "outputId": "1bd84039-f4cd-41c7-81b6-6f6130024e97"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "F1 Macro scores for each fold: [0.14285714 0.14285714 0.14492754 0.14492754 0.14117647]\n",
+            "Average F1 Macro score: 0.14334916575325782\n"
           ]
         }
       ]
@@ -724,7 +955,7 @@
         "id": "Dew_NEbp5UR_",
         "outputId": "f00f80e0-f67c-412d-f7f3-1c0d087548bb"
       },
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -755,7 +986,7 @@
       "metadata": {
         "id": "nvcHR-0f5eC2"
       },
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -787,7 +1018,7 @@
         "id": "qL_kzP7j5nmm",
         "outputId": "c36d3a04-496e-4d71-8452-4d4e38fa61d4"
       },
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -870,7 +1101,7 @@
       "metadata": {
         "id": "PZ5xRCnABlle"
       },
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": []
     }
   ]
